--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,21 @@
 buildscript {
     ext {
-        compose_version = '1.1.0-beta01'
+        compose_version = '1.3.0-rc01'
+        dagger_hilt = '2.44'
+        retrofit = '2.9.0'
+        okhttp = '4.9.3'
+        room = '2.4.3'
     }
-}// Top-level build file where you can add configuration options common to all sub-projects/modules.
+
+    dependencies {
+        classpath "com.google.dagger:hilt-android-gradle-plugin:2.44"
+    }
+}
+
 plugins {
     id 'com.android.application' version '7.2.2' apply false
     id 'com.android.library' version '7.2.2' apply false
-    id 'org.jetbrains.kotlin.android' version '1.5.31' apply false
+    id 'org.jetbrains.kotlin.android' version '1.7.10' apply false
 }
 
 task clean(type: Delete) {
