--- a/app/build.gradle
+++ b/app/build.gradle
@@ -84,6 +84,9 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.1'
     implementation 'androidx.activity:activity-compose:1.6.1'
 
+    // Compose navigation
+    implementation "androidx.navigation:navigation-compose:2.6.0-alpha04"
+
     // Testing
     testImplementation "junit:junit:4.13.2"
     androidTestImplementation "androidx.test.ext:junit:1.1.5"
