--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,6 +63,9 @@ dependencies {
     implementation "com.google.code.gson:gson:$retrofit"
     implementation "com.squareup.retrofit2:converter-gson:$retrofit"
 
+    // Location services
+    implementation "com.google.android.gms:play-services-location:21.0.1"
+
     // Database
     implementation "androidx.room:room-runtime:$room"
     kapt "androidx.room:room-compiler:$room"
