--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,7 @@ buildscript {
 
     dependencies {
         classpath "com.google.dagger:hilt-android-gradle-plugin:2.44"
+        classpath "org.jetbrains.kotlin:kotlin-serialization:1.7.10"
     }
 }
 
@@ -16,6 +17,7 @@ plugins {
     id 'com.android.application' version '7.2.2' apply false
     id 'com.android.library' version '7.2.2' apply false
     id 'org.jetbrains.kotlin.android' version '1.7.10' apply false
+    id 'org.jetbrains.kotlin.plugin.serialization' version '1.7.10'
 }
 
 task clean(type: Delete) {
