--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,6 +5,7 @@ plugins {
     id 'com.google.dagger.hilt.android'
     id 'org.jetbrains.kotlin.plugin.serialization'
     id 'kotlin-parcelize'
+    id 'com.google.protobuf' version "0.8.17"
 }
 
 android {
@@ -56,15 +57,35 @@ android {
     }
 }
 
+protobuf {
+    protoc {
+        artifact = "com.google.protobuf:protoc:3.14.0"
+    }
+    generateProtoTasks {
+        all().each { task ->
+            task.builtins {
+                java {
+                    option 'lite'
+                }
+            }
+        }
+    }
+}
+
 dependencies {
 
     // Network
     implementation "com.squareup.okhttp3:okhttp:$okhttp"
     implementation "com.squareup.retrofit2:retrofit:$retrofit"
     implementation "com.squareup.okhttp3:logging-interceptor:$okhttp"
-        // Gson
+
+    // Gson
     implementation "com.google.code.gson:gson:$retrofit"
     implementation "com.squareup.retrofit2:converter-gson:$retrofit"
+
+    // Serializable
+    implementation "org.jetbrains.kotlinx:kotlinx-collections-immutable:0.3.5"
+    implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.3.2"
 
     // Location services
     implementation "com.google.android.gms:play-services-location:21.0.1"
@@ -73,6 +94,10 @@ dependencies {
     implementation "androidx.room:room-runtime:$room"
     kapt "androidx.room:room-compiler:$room"
     implementation "androidx.room:room-ktx:$room"
+
+    // Protobuf Datastore
+    implementation  "androidx.datastore:datastore:1.0.0"
+    implementation  "com.google.protobuf:protobuf-javalite:3.18.0"
 
     // Dependency injection
     implementation "com.google.dagger:hilt-android:$dagger_hilt"
@@ -83,7 +108,6 @@ dependencies {
     // Core
     implementation "androidx.core:core-ktx:1.9.0"
     implementation "androidx.compose.ui:ui:$compose_version"
-    //implementation "androidx.compose.material:material:$compose_version"
     implementation 'androidx.compose.material3:material3:1.1.0-alpha04'
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
     implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.5.1"
